alignment bug fix

--- a/styles-dark.css
+++ b/styles-dark.css
@@ -343,6 +343,7 @@ svg.icon:hover{
     }
     
     .contents{
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
         align-content: center;
@@ -444,4 +445,10 @@ svg.icon:hover{
     #projects h2{
         text-shadow: 3px 3px 2px var(--gray);
     }
+    #projects button{
+        margin: 1em auto;
+    }
+
+    /*contact-mobile=====================*/
+
 }
